Greatly improved admin page, and put navbar code in partial. Fixed #51. Fixed #48. Fixed #43 by hiding scrollbar at all times.

--- a/public/css/dark_mode.css
+++ b/public/css/dark_mode.css
@@ -172,3 +172,16 @@ nav .navbar-collapse.collapsing .btn{
 .blurred-background {
     content: url(/public/resources/dark_mode/blur.png) !important;
 }
+
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+.nav-item {
+    width: inherit;
+}
